--- a/baseline/pingfederate/instance/server/default/conf/language-packs/authn-api-messages.properties
+++ b/baseline/pingfederate/instance/server/default/conf/language-packs/authn-api-messages.properties
@@ -1,4 +1,4 @@
-# Build timestamp: 2020-06-02 20:41
+# Build timestamp: 2020-12-09 18:21
 
 # This file specifies the message strings for errors defined in the PingFederate
 # Authentication API SDK.
@@ -21,6 +21,7 @@ authn.api.missing.required.field=This field is required.
 authn.api.unexpected.action.model=Unexpected action model was found.
 authn.api.invalid.field.format=The format of this field is invalid.
 authn.api.invalid.otp=This passcode is invalid or has expired.
+authn.api.invalid.otp.length=The length of the passcode is invalid.
 authn.api.otp.resend.limit=The passcode has been re-sent the maximum number of times.
 authn.api.otp.attempts.limit=Too many unsuccessful passcode attempts.
 authn.api.service.unavailable=Service unavailable.
@@ -33,3 +34,12 @@ authn.api.device.locked=Your device is locked.
 authn.api.device.rooted=Your device is rooted or jailbroken.
 authn.api.push.failed=Couldn't send the push notification.
 authn.api.otp.expired=This passcode has expired.
+authn.api.no.response.passive.push=Not authorized.
+authn.api.device.blocked=Your device is blocked.
+authn.api.external.authn.failed.user.cancelled=You have cancelled the sign-on request.
+authn.api.external.authn.failed.auth.code.error=We couldn't sign you on to the external identity provider.
+authn.api.mfa.disabled=MFA is disabled for user.
+authn.api.no.usable.devices=User has no usable devices.
+authn.api.mfa.user.not.found=User unavailable.
+authn.api.totp.attempts.limit=Too many unsuccessful attempts with this passcode. Please try again in a few minutes.
+
